--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -2,11 +2,93 @@ main {
   min-height: 83vh;
 }
 
-.product-title {
-  height: 2.5em; /* Set a fixed height */
-  overflow: hidden; /* Hide overflow content */
-  text-overflow: ellipsis; /* Add ellipsis for long text */
-  white-space: nowrap; /* Prevent wrapping */
+main {
+  width: 100vw;
+  padding: 10px 20px;
+  background-color: #efefef;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("music_score.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  margin: 0 auto;
+}
+
+/* Home page */
+/* .homePage {
+  padding-top: 250px;
+} */
+.homePageTitle {
+  margin-top: 200px;
+}
+.links {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+.btn-link {
+  border: 1px solid white;
+  background: #000;
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 10px;
+  transition: 0.5s ease-in-out;
+}
+.btn-link:hover {
+  background: #fff;
+  color: #000;
+  border: 1px solid #000;
+}
+
+.mainTitle {
+  color: #fff;
+  font-size: 48px;
+  font-weight: 600;
+  text-shadow: 4px 4px 8px #000;
+  animation: slideInFromLeft 2s ease-in;
+}
+.mainSubtitle {
+  color: #fff;
+  font-weight: 600;
+  text-align: center;
+  font-size: 40px;
+  text-shadow: 4px 4px 10px #000;
+  animation: slideInFromRight 2s ease-in;
+}
+/* Animations */
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+@keyframes slideInFromRight {
+  0% {
+    transform: translateX(100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+.performanceDetail {
+  background: #fff;
+  padding: 20px 20px 50px 20px;
+  margin-top: 100px;
+  border-radius: 10px;
+}
+.recordingDetail {
+  background: #fff;
+  padding: 20px 20px 50px 20px;
+  margin-top: 50px;
+  border-radius: 10px;
 }
 .card-body {
   flex: 1 1 auto;
