--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -103,6 +103,12 @@ main {
   background-color: #fff;
   border-radius: 10px;
 }
+.loginForm {
+  margin-top: 100px;
+}
+.registerForm {
+  margin-top: 75px;
+}
 
 .performanceDetail {
   background: #fff;
