--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -15,6 +15,16 @@ main {
   margin: 0 auto;
 }
 
+.dropdown-item.active {
+  color: #fff;
+  background-color: #000;
+}
+.dropdown-item:hover,
+.dropdown-item:focus {
+  color: #fff;
+  background-color: #000;
+}
+
 /* Home page */
 .homePageTitle {
   margin-top: 200px;
@@ -119,6 +129,20 @@ main {
   padding: 10px 20px;
   background-color: #fff;
   border-radius: 10px;
+}
+.formRow {
+  display: flex;
+  align-items: center;
+}
+.labelTop {
+  width: 10%;
+  margin-top: 0.5rem;
+  font-weight: 600;
+}
+.labelName {
+  width: 25%;
+  margin-top: 0.5rem;
+  font-weight: 600;
 }
 
 .performanceDetail {
