Admin user functions completed

--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -144,6 +144,15 @@ main {
   margin-top: 0.5rem;
   font-weight: 600;
 }
+.imageInputs {
+  display: flex;
+  align-items: center;
+  width: 75%;
+}
+.imageLeft,
+.imageRight {
+  width: 50%;
+}
 
 .performanceDetail {
   background: #fff;
