--- a/frontend/src/pages/Recordings/RecordingCard.css
+++ b/frontend/src/pages/Recordings/RecordingCard.css
@@ -2,26 +2,52 @@
   display: flex;
   flex-wrap: wrap;
   z-index: -2;
-  background-color: #000;
 }
 
 .card-container a {
   text-decoration: none;
 }
 
-.card {
-  width: 375px;
-  height: 125px;
+.recordingCard {
+  position: relative;
+  width: 290px;
+  height: 265px;
   margin: 10px;
-  border: 2px solid #ededed;
+  padding: 10px 5px;
+  border: 1px solid #000;
+  border-radius: 10px;
   cursor: pointer;
 }
-.card-work {
+.card-image img {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  border: 1px solid #000;
+}
+.cardComposer {
   font-size: 16px;
-  font-weight: 650;
+  color: #232323;
+  font-weight: 600;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.cardWork {
+  font-weight: 600;
+  font-size: 14px;
+  color: rgb(83, 82, 82);
   margin-left: 5px;
   margin-right: 5px;
   margin-bottom: 1rem;
+  -webkit-line-clamp: 3;
+}
+.cardArtists {
+  font-weight: 600;
+  margin-left: 5px;
+  margin-right: 5px;
+  font-size: 13px;
+  color: rgb(189, 30, 117);
+  position: absolute;
+  top: 175px;
 }
 .cardFooter {
   position: absolute;
