--- a/frontend/src/assets/styles/bootstrap.custom.css
+++ b/frontend/src/assets/styles/bootstrap.custom.css
@@ -3973,7 +3973,7 @@ fieldset:disabled .btn {
   padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
   font-size: var(--bs-nav-link-font-size);
   font-weight: var(--bs-nav-link-font-weight);
-  color: var(--bs-nav-link-color);
+  color: rgba(255, 255, 255, 0.75);
   text-decoration: none;
   background: none;
   border: 0;
@@ -3987,7 +3987,7 @@ fieldset:disabled .btn {
 }
 .nav-link:hover,
 .nav-link:focus {
-  color: var(--bs-nav-link-hover-color);
+  color: rgba(255, 255, 255, 1);
 }
 .nav-link:focus-visible {
   outline: 0;
@@ -12672,4 +12672,3 @@ fieldset:disabled .btn {
     display: none !important;
   }
 }
-
